# SS6PlayerForCPP

./: CMakeLists.txt
src/: CMakeLists.txt
src/Application/: CMakeLists.txt
src/Application/OpenGL/: main.cpp
src/Platform/OpenGL/: ss6player_file.cpp  ss6player_memory.cpp  ss6player_texture.cpp  ss6player_types.cpp  ss6player_types.h
src/Shader/OpenGL/src/: ss6player_standard.fs  ss6player_standard.vs  ss6player_standard_mask.fs
